--- a/PharmacyDeliverySystem/Views/Home/Index.cshtml
+++ b/PharmacyDeliverySystem/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
             Total Products: @ViewBag.TotalProducts
         </a>
 
-        <a asp-controller="Pharmacy" asp-action="AddAdmin" class="btn btn-primary m-2">
+        <a asp-controller="PharmacyAuth" asp-action="AddAdmin" class="btn btn-primary m-2">
             Add Owner/Admin
         </a>
 
